<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_15"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:ems="100"
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/hint_phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/input_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_amount" />
    </android.support.design.widget.TextInputLayout>

    <Button
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/btn_donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_donate"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"/>

</LinearLayout>
